[workspace]
members = [
    "pb-cfg",
    "pb-cli",
    "pb-core",
    "pb-filesystem",
    "pb-ore",
    "pb-rules-host",
    "pb-rules-sdk",
    "pb-types",
]
resolver = "2"

[workspace.package]
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
