[package]
name = "pb-core"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
blake3 = "1"
pb-filesystem = { path = "../pb-filesystem" }
wasmtime = { version = "32", features = [
    "runtime",
    "cranelift",
    "component-model",
] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
