[package]
name = "pb-filesystem"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
bitflags = "2"
cfg-if = "1"
futures = "0.3"
pb-ore = { path = "../pb-ore" }
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "sync",
], default-features = false }
tracing = "0.1"
