[package]
name = "pb-filesystem"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
async-stream = "0.3"
bitflags = "2"
blake3 = "1"
cfg-if = "1"
futures = "0.3"
pb-ore = { path = "../pb-ore" }
pb-types = { path = "../pb-types" }
rayon = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "rt",
    "io-util",
    "sync",
], default-features = false }
tracing = "0.1"
