[package]
name = "pb-rules-host"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
bytes = "1"
futures = "0.3"
reqwest = "0.12"
tokio = "1"
tracing = "0.1"
wit-bindgen = "0.42"
wasmtime = { version = "32", features = [
    "runtime",
    "component-model",
], default-features = false }
