[package]
name = "pb-rules-host"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
ansi_term = "0.12"
anyhow = "1"
async-stream = "0.3"
bytes = "1"
futures = "0.3"
pb-cfg = { path = "../pb-cfg" }
pb-filesystem = { path = "../pb-filesystem" }
pb-ore = { path = "../pb-ore" }
pb-types = { path = "../pb-types" }
reqwest = "0.12"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
wit-bindgen = "0.42"
wasmtime = { version = "32", features = [
    "runtime",
    "component-model",
], default-features = false }
