[package]
name = "pb-trie"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
anyhow = "1"
compact_str = "0.9"
derivative = "2"
pb-ore = { path = "../pb-ore" }
pb-types = { path = "../pb-types" }
ptree = "0.5"
smallvec = { version = "1.15", features = ["union"] }
