[package]
name = "pb-types"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
include.workspace = true

[[bench]]
name = "hashing"
harness = false

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[dev-dependencies]
blake3 = "1"
criterion = { version = "0.5", features = ["html_reports"] }
md5 = "0.7.0"
sha2 = "0.10.9"
